--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "express": "^4.18.2",
     "glob": "^9.3.2",
     "typescript": "^5.0.2",
-    "webpack": "^5.76.3"
+    "webpack": "^5.76.3",
+    "webpack-bundle-analyzer": "^4.8.0"
   }
 }
